--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -134,47 +134,44 @@ onReady(function() {
   {# Global javascript #}
 
   {% compress js %}
-  <!-- Vendor JS Files -->
+  <!-- Vendor specific JS Files -->
   <script src="{% static 'assets/vendor/jquery/jquery.min.js' %}"></script>
 
   <script src="{% static 'assets/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
   <script src="{% static 'assets/vendor/jquery.easing/jquery.easing.min.js' %}"></script>
-  <script src="{% static 'assets/vendor/php-email-form/validate.js' %}"></script>
+  
   <script src="{% static 'assets/vendor/owl.carousel/owl.carousel.min.js' %}"></script>
   <script src="{% static 'assets/vendor/waypoints/jquery.waypoints.min.js' %}"></script>
   <script src="{% static 'assets/vendor/counterup/counterup.min.js' %}"></script>
   <script src="{% static 'assets/vendor/isotope-layout/isotope.pkgd.min.js' %}"></script>
   <script src="{% static 'assets/vendor/venobox/venobox.min.js' %}"></script>
   <script src="{% static 'assets/vendor/aos/aos.js' %}"></script>
-
-  <!-- Template Main JS File -->
+  <!-- App specific JS File -->
   <script src="{% static 'assets/js/main.js' %}"></script>
   {% endcompress %}
 
-<script>
+  <script>
+  function showToastMessage(body) {
+      $('#micro-messages').empty();
+      $('#micro-messages').append(
+          '<div class="alert alert-success micro-message" data-aos-anchor-placement="top-center" data-aos-delay="800" data-aos="slide-down" data-delay="2000" role="alert" style=" border-radius:16px; padding:4px 8px; font-size: .8rem;">' + body + '</div>');
+      $(".micro-message").toast('show', function() {}, {delay: 3000});
+  }
 
+  $(document).ready(function(){
+      $(".micro-message").toast('show', {
+              delay: 2000
+          });
+      $(".toast").toast('show', {
+              delay: 35000
+          });
+  });
+  </script>
 
-
-function showToastMessage(body) {
-    $('#micro-messages').empty();
-    $('#micro-messages').append(
-        '<div class="alert alert-success micro-message" data-aos-anchor-placement="top-center" data-aos-delay="800" data-aos="slide-down" data-delay="2000" role="alert" style=" border-radius:16px; padding:4px 8px; font-size: .8rem;">' + body + '</div>');
-    $(".micro-message").toast('show', function() {}, {delay: 3000});
-}
-
-$(document).ready(function(){
-    $(".micro-message").toast('show', {
-            delay: 2000
-        });
-    $(".toast").toast('show', {
-            delay: 35000
-        });
-});
-</script>
-  {% block extra_js %}
+{% block extra_js %}
     {# Override this in templates to add extra javascript #}
-  {% endblock %}
-{% comment %} </div> {% endcomment %}
+{% endblock %}
+
 
 
 
