--- a/profiles/templates/profiles/modals/_add_announcement_modal.html
+++ b/profiles/templates/profiles/modals/_add_announcement_modal.html
@@ -6,8 +6,8 @@
 {% with id="addAnnouncementModal" title='Dodaj nowe ogłoszenie' %}
 
 
-  <div class="modal fade" id="{{ id }}" tabindex="-1" role="dialog" aria-labelledby="{{ id }}Label" aria-hidden="true">
-    <div class="modal-dialog" role="document">
+  <div class="modal fade bd-example-modal-lg" id="{{ id }}" tabindex="-1" role="dialog" aria-labelledby="{{ id }}Label" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="{{ id }}Label">{{ title }}</h5>
