--- a/clubs/templates/clubs/teams/data.html
+++ b/clubs/templates/clubs/teams/data.html
@@ -1,8 +1,8 @@
 {% load i18n %}
 {% load static %}
-{% with template='profiles/partials/_two_table_true_false.html'  object=object %}
+{% with template='platform/tables/two_table_true_false.html'  object=object %}
 
-    <div class="card">
+    <div class="card m-2">
         <div class="card-body">
             <h2 class="card-title">{% trans 'Drużyna' %}</h2>
 
