--- a/clubs/templates/clubs/show_team.html
+++ b/clubs/templates/clubs/show_team.html
@@ -10,16 +10,62 @@
 
 
 {% block content %}
-<section>
+
+
+<style>
+#team{ 
+    background-color:#F8F8F8;
+}
+#marketplace .announcement-card {
+    /*border-left: 5px solid #e03a3c;*/
+}
+ #marketplace .announcement-card .card-body {
+    
+ } 
+#marketplace .announcement-card .sub-title {
+
+    font-size: .5rem;
+}
+
+
+#marketplace .announcement-card .card-footer {
+    background: #fff;
+    border-top:1px dashed #ccc;
+ } 
+
+
+@media all and (max-width: 768px) {
+    #marketplace .container-fluid {
+        padding-right: 0px;
+        padding-left: 0px;
+    } 
+    #team .card {
+        border: 1px solid rgba(0,0,0,.125);
+        border-radius: .25rem;
+    }
+    #marketplace .announcement-card .card-body {
+        padding: .65rem .55rem;
+    } 
+}
+</style>
+
+
+<section id="team" class="team">
     <div class="container">
-        <h1> {{ team.name }} </h2>
-            {% if editable %}
+        <div>
+            <h1 class="float-left"> {{ team.name }}   </h1>
+            
+            <small> {% if editablexxx %}
                 {% url 'clubs:edit_team' slug=team.slug as button_url%}
                 {% include 'platform/buttons/action_button.html' with button_text=_('Edytuj') button_url=button_url %}
             {% endif %}
+            </small>
+     
+        </div>
         <div class="row">
-            <div class="col-sm-6">{% include 'clubs/teams/card.html' with team=team %}</div>
-            <div class="col-sm-6">{% include 'clubs/teams/data.html' with object=team %}</div>
+            <div class="col-sm-6">{% include 'clubs/teams/card.html'      with object=team  see_club=True %}</div>
+            <div class="col-sm-6">{% include 'clubs/teams/data.html'      with object=team %}</div>
+            <div class="col-sm-6">{% include 'clubs/teams/managers.html'  with object=team %}</div>
         </div>
         
        
