--- a/profiles/templates/profiles/widgets/bootstrap_datetimepicker.html
+++ b/profiles/templates/profiles/widgets/bootstrap_datetimepicker.html
@@ -9,6 +9,7 @@
   $(function () {
     $("#{{ widget.datetimepicker_id }}").datetimepicker({
       format: 'YYYY-MM-DD',
+      defaultDate: new Date(2004, 0, 1)
     });
   });
 </script>
