--- a/backend/templates/partials/navigation.html
+++ b/backend/templates/partials/navigation.html
@@ -25,7 +25,7 @@
           {% if request.user.is_authenticated %}
           <li class="drop-down"><a href="{% url 'profiles:show_self' %}"><!--i class="icofont-user-alt-7"></i--><img class="navigation-avatar rounded-circle img-responsive"  src="{% thumbnail user.picture|default:'default_profile.png' 'nav_avatar' %}"> {{ request.user.display_name }}</a>
             <ul>
-              <li><a href="{% url 'profiles:show_self' %}">Profil</a></li>
+              <li><a href="{% url 'profiles:show' slug=user.profile.slug %}">Profil</a></li>
               <li><a href="{% url 'profiles:edit_self' %}">Edytuj CV
                 <div class="progress">
                   <div class="progress-bar bg-success" style="width:{{user.profile.percentage_completion}}%">{{user.profile.percentage_completion}}%</div>
