--- a/profiles/templates/profiles/cards/player/about_card.html
+++ b/profiles/templates/profiles/cards/player/about_card.html
@@ -9,23 +9,21 @@
 
             <h6 class="card-subtitle mb-2 text-muted"></h6>
 
-            <div class="card-text">
 
-
-                                                    {% include template with key=_('Pozycja')                            value=profile.get_position_raw_display|default:'-'      %}
-                {% if  profile.position_raw_alt %}  {% include template with key=_('Pozycja alternatywna')               value=profile.get_position_raw_alt_display|default:'-'  %} {% endif %}
-                                                    {% include template with key=_('Formacja')                           value=profile.get_formation_display|default:'-'         %}
-                {% if  profile.formation_alt_ %}    {% include template with key=_('Formacja alternatywna')              value=profile.get_formation_alt_display|default:'-'     %} {% endif %}
-                                                    {% include template with key=_('Adres')                              value=profile.address|default:'-'                        %}
-                                                    {% include template with key=_('Oczekiwana liczba treningów')        value=profile.get_training_ready_display|default:'-' value_suffix=_('/tydzień')  %}
-                                                    {% include template with key=_('Maksymalna odległość na treningi')   value=profile.practice_distance|default:'-' value_suffix=_('km')         %}
+            <div class="card-text about-field">
+              
+                {{ profile.about|default:'' }}    
+                           
             </div>
 
             <div class="card-text">
-            <h2 class="mt-3 card-title">{% trans 'Współpraca' %} </h2>
-                {% include template with key=_('Imie i nazwisko trenera')  value=profile.traing|default:'-'         %}
-                
+                <h2 class="mt-3 card-title">{% trans 'Treningi' %} </h2>
+                {% include template with key=_('Miasto dojazdu na treningi')         value=profile.address|default:'-'                        %}
+                {% include template with key=_('Oczekiwana liczba treningów')        value=profile.get_training_ready_display|default:'-' value_suffix=_('/tydzień')  %}
+                {% include template with key=_('Maksymalna odległość na treningi')   value=profile.practice_distance|default:'-' value_suffix=_('km')         %}
+            
             </div>  <!-- end of card-text-->
+
         </div>
     </div>
 
