--- a/profiles/templates/profiles/cards/player/primary_card.html
+++ b/profiles/templates/profiles/cards/player/primary_card.html
@@ -7,17 +7,13 @@
 
     <div class="card-text">
     {% with profile=show_user.profile template='platform/tables/two_table.html' %}
-         {% include template with key=_('Noga')               value=profile.get_prefered_leg_display|default:'-'  %}
-         {% include template with key=_('Pozycja')            value=profile.get_position_raw_display|default:'-'  %}
-         {% include template with key=_('Wiek')               value=profile.age|default:'-'|upper           %}   
-         {% include template with key=_('Obecna drużyna')     value=profile.team|default:'-'|upper           %}
-         {% include template with key=_('Poziom rozgrywkowy') value=profile.league|default:'-'|upper         %}
-         {% include template with key=_('Grupa')              value=profile.group|default:'-'|upper              %}
-         {% include template with key=_('Wojewódzctwo')       value=profile.display_voivodeship|default:'-'|upper    %}
-         {% include template with key=_('Wzrost/Waga')        value=profile.height|default:'-' value_suffix='cm' separator='/' value2=profile.weight|default:'-' value2_suffix='kg'%}
-         {% include template with key=_('Status transferowy') value=profile.get_transfer_status_display|default:'-'  %}
-         {% include template with key=_('Karta')              value=profile.get_card_display|default:'-' %}
-         {% include template with key=_('Piłkarski cel')      value=profile.get_soccer_goal_display|default:'-'  %}
+        {% include template with key=_('Noga')               value=profile.get_prefered_leg_display|default:'-'  %}
+        {% include template with key=_('Pozycja')            value=profile.get_position_raw_display|default:'-'  %}
+        {% include template with key=_('Wiek')               value=profile.age|default:'-'|upper           %}   
+        {% include template with key=_('Obecna drużyna')     value=profile.team|default:'-'|upper           %}
+        {% include template with key=_('Poziom rozgrywkowy') value=profile.league|default:'-'|upper         %}
+        {% comment %} {% include template with key=_('Grupa')              value=profile.group|default:'-'|upper              %} {% endcomment %}
+        {% include template with key=_('Wojewodźtwo')        value=profile.voivodeship|default:'-'|lower            %}
     {% endwith %}
     </div>  <!-- end of card-text-->
 
