fix: team,coach,player display in inquires

--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -84,6 +84,7 @@ onReady(function() {
 </head>
 
 <body >
+  {% include 'ga.html' %}
   {% comment %} <div id="loading">
     <a href="#" class="intro-banner-vdo-play-btn pinkBg" target="_blank">
         <i class="glyphicon glyphicon-play whiteText" aria-hidden="true"></i>
